<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailsActivity">


    <TableLayout
        android:id="@+id/tableHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="28dp"
            android:paddingBottom="8dp"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/user_icon"
                android:scaleType="fitStart"
                android:contentDescription="@string/usericon"/>

            <TextView
                android:id="@+id/name_var"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/placeholder"
                android:gravity="bottom|end"
                android:textSize="24sp"
                android:textStyle="bold" />

        </TableRow>

        <!-- Black divider line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

    </TableLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/scroll"
        android:fadingEdge="vertical"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tableHeader">


        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/row_padding_horizontal"
                android:paddingVertical="@dimen/row_padding_vertical"
                android:background="@color/colorAccentRow"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/id_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/student_id"
                    android:textSize="@dimen/details_row_size"
                    android:textAlignment="textStart"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/id_var"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/placeholder"
                    android:textSize="@dimen/details_row_size"
                    android:textAlignment="textEnd"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/row_padding_horizontal"
                android:paddingVertical="@dimen/row_padding_vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/address_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/address"
                    android:textSize="@dimen/details_row_size"
                    android:textAlignment="textStart"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/address_var"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/placeholder"
                    android:textSize="@dimen/details_row_size"
                    android:textAlignment="textEnd"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/row_padding_horizontal"
                android:paddingVertical="@dimen/row_padding_vertical"
                android:background="@color/colorAccentRow"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/long_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/longitude"
                    android:textSize="@dimen/details_row_size"
                    android:textAlignment="textStart"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/long_var"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/placeholder"
                    android:textSize="@dimen/details_row_size"
                    android:textAlignment="textEnd"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/row_padding_horizontal"
                android:paddingVertical="@dimen/row_padding_vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/lat_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/latitude"
                    android:textSize="@dimen/details_row_size"
                    android:textAlignment="textStart"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lat_var"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/placeholder"
                    android:textSize="@dimen/details_row_size"
                    android:textAlignment="textEnd"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/row_padding_horizontal"
                android:paddingVertical="@dimen/row_padding_vertical"
                android:background="@color/colorAccentRow"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/phone_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phone"
                    android:textSize="@dimen/details_row_size"
                    android:textAlignment="textStart"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/phone_var"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/placeholder"
                    android:textSize="@dimen/details_row_size"
                    android:textColor="#0277BD"
                    android:textAlignment="textEnd"/>

            </TableRow>

        </TableLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation"
        tools:ignore="VisualLintBottomNav" />

</androidx.constraintlayout.widget.ConstraintLayout>